# standards-experiment

ft-api/: Cargo.toml
ft-api/src/: lib.rs
my-token/: Cargo.toml
my-token/src/: lib.rs
